[fixed] modal z-index more heigher

--- a/resources/css/modal.css
+++ b/resources/css/modal.css
@@ -8,7 +8,7 @@
 
 .modal__overlay {
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   top: 0;
   left: 0;
   right: 0;
